[gd_scene load_steps=3 format=3 uid="uid://cssrvmcgwol05"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_kxfks"]
[ext_resource type="Texture2D" uid="uid://xt4skcy031w2" path="res://assets/menu/Captura de Tela (4).png" id="3_evs3u"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_kxfks")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(574, 315)
scale = Vector2(0.9, 0.892)
texture = ExtResource("3_evs3u")

[node name="PlayButton" type="Button" parent="."]
offset_left = 171.0
offset_top = 271.0
offset_right = 349.0
offset_bottom = 375.0
scale = Vector2(0.885897, 0.915153)

[node name="LoadButton" type="Button" parent="."]
offset_left = 171.0
offset_top = 387.0
offset_right = 351.0
offset_bottom = 491.0
scale = Vector2(0.880001, 0.881748)

[node name="QuitButton" type="Button" parent="."]
offset_left = 171.0
offset_top = 500.0
offset_right = 351.0
offset_bottom = 604.0
scale = Vector2(0.880001, 0.887654)

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="LoadButton" to="." method="_on_load_button_mouse_entered"]
[connection signal="mouse_exited" from="LoadButton" to="." method="_on_load_button_mouse_exited"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
